--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="net.flaxia.android.githubviewer" android:versionCode="1"
     android:versionName="1.0">
     <uses-sdk android:minSdkVersion="7" />
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application android:icon="@drawable/icon"
         android:label="@string/app_name">
         <activity android:name=".StartActivity" android:label="@string/app_name">
@@ -13,5 +14,6 @@
         </activity>
         <activity android:name=".DashbordActivity"
             android:label="@string/app_name" />
+        <activity android:name=".SearchActivity" android:label="@string/app_name" />
     </application>
 </manifest>
