--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,5 +15,6 @@
         <activity android:name=".DashbordActivity"
             android:label="@string/app_name" />
         <activity android:name=".SearchActivity" android:label="@string/app_name" />
+        <activity android:name=".BlobsActivity" android:label="@string/app_name" />
     </application>
 </manifest>
