--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,5 +16,6 @@
             android:label="@string/app_name" />
         <activity android:name=".SearchActivity" android:label="@string/app_name" />
         <activity android:name=".BlobsActivity" android:label="@string/app_name" />
+        <activity android:name=".CodeViewActivity" android:label="@string/app_name" />
     </application>
 </manifest>
