--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,5 +18,6 @@
         <activity android:name=".BlobsActivity" android:label="@string/app_name" />
         <activity android:name=".CodeViewActivity"
             android:label="@string/app_name" android:theme="@android:style/Theme.Black.NoTitleBar" />
+        <activity android:name=".InformationActivity" android:label="@string/app_name" />
     </application>
 </manifest>
