--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DashbordActivity"
+        <activity android:name="DashboardActivity"
             android:label="@string/app_name" />
         <activity android:name=".SearchActivity" android:label="@string/app_name" />
         <activity android:name=".BlobsActivity" android:label="@string/app_name" />
