--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,5 +19,6 @@
         <activity android:name=".CodeViewActivity"
             android:label="@string/app_name" android:theme="@android:style/Theme.Black.NoTitleBar" />
         <activity android:name=".InformationActivity" android:label="@string/app_name" />
+        <activity android:name=".RepositorieInfoActivity" android:label="@string/app_name" />
     </application>
 </manifest>
