--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="net.flaxia.android.githubviewer" android:versionCode="1"
     android:versionName="1.0">
     <uses-sdk android:minSdkVersion="7" />
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
     <application android:icon="@drawable/icon"
         android:label="@string/app_name" android:debuggable="true">
         <activity android:name=".StartActivity" android:label="@string/app_name">
