--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,6 +21,6 @@
         <activity android:name=".InformationActivity"
             android:label="@string/app_name" />
         <activity android:name=".RepositorieInfoActivity"
-            android:label="@string/app_name" android:theme="@android:style/Theme.Dialog" />
+            android:label="@string/app_name" />
     </application>
 </manifest>
