bookmarkできるようになった

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,5 +23,7 @@
             android:label="@string/app_name" />
         <activity android:name=".RepositorieInfoActivity"
             android:label="@string/app_name" />
+        <activity android:name=".EditBookmarkActivity"
+            android:label="@string/app_name" />
     </application>
 </manifest>
