ブックマークを表示できるようになった

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,5 +25,7 @@
             android:label="@string/app_name" />
         <activity android:name=".EditBookmarkActivity"
             android:label="@string/app_name" />
+        <activity android:name=".BookmarkActivity"
+            android:label="@string/app_name" />
     </application>
 </manifest>
