--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,5 +28,7 @@
             android:label="@string/app_name" />
         <activity android:name=".BookmarkActivity"
             android:label="@string/app_name" />
+        <activity android:name=".ConfigureActivity"
+            android:label="@string/app_name" />
     </application>
 </manifest>
