--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,13 +16,17 @@
         </activity>
         <activity android:name="DashboardActivity"
             android:label="@string/app_name" />
-        <activity android:name=".SearchActivity" android:label="@string/app_name" />
-        <activity android:name=".BlobsActivity" android:label="@string/app_name" />
+        <activity android:name=".SearchActivity" android:label="@string/app_name"
+            android:configChanges="orientation|keyboardHidden" />
+        <activity android:name=".BlobsActivity" android:label="@string/app_name"
+            android:configChanges="orientation|keyboardHidden" />
         <activity android:name=".CodeViewActivity"
+            android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name" android:theme="@android:style/Theme.Black.NoTitleBar" />
         <activity android:name=".InformationActivity"
             android:label="@string/app_name" />
         <activity android:name=".RepositorieInfoActivity"
+            android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name" />
         <activity android:name="BookmarkEditActivity"
             android:label="@string/app_name" />
