--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="net.flaxia.android.githubviewer" android:versionCode="6"
-    android:versionName="1.0.5">
-    <uses-sdk android:minSdkVersion="7" />
+    package="net.flaxia.android.githubviewer" android:installLocation="auto"
+    android:versionCode="6" android:versionName="1.0.5">
+    <uses-sdk android:minSdkVersion="4" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application android:icon="@drawable/icon"
