--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,7 @@
             </intent-filter>
         </activity>
         <activity android:name="DashboardActivity"
-            android:label="@string/app_name" />
+            android:theme="@android:style/Theme.Black.NoTitleBar" />
         <activity android:name=".SearchActivity" android:label="@string/app_name"
             android:configChanges="orientation|keyboardHidden" />
         <activity android:name=".BlobsActivity" android:label="@string/app_name"
