--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,8 +16,12 @@
         </activity>
         <activity android:name="DashboardActivity"
             android:theme="@android:style/Theme.Black.NoTitleBar" />
-        <activity android:name=".SearchActivity" android:label="@string/app_name"
-            android:configChanges="orientation|keyboardHidden" />
+        <activity android:name=".SearchActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:theme="@android:style/Theme.Black.NoTitleBar" />
+        <activity android:name=".UserSearchActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:theme="@android:style/Theme.Black.NoTitleBar" />
         <activity android:name=".BlobsActivity" android:label="@string/app_name"
             android:configChanges="orientation|keyboardHidden" />
         <activity android:name=".CodeViewActivity"
