--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,8 @@
         <activity android:name=".UserSearchActivity"
             android:configChanges="orientation|keyboardHidden"
             android:theme="@android:style/Theme.Black.NoTitleBar" />
+        <activity android:name=".UserRepositoryActivity" android:label="@string/app_name"
+            android:configChanges="orientation|keyboardHidden" />
         <activity android:name=".BlobsActivity" android:label="@string/app_name"
             android:configChanges="orientation|keyboardHidden" />
         <activity android:name=".CodeViewActivity"
