--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,8 +22,8 @@
         <activity android:name=".UserSearchActivity"
             android:configChanges="orientation|keyboardHidden"
             android:theme="@android:style/Theme.Black.NoTitleBar" />
-        <activity android:name=".UserRepositoryActivity" android:label="@string/app_name"
-            android:configChanges="orientation|keyboardHidden" />
+        <activity android:name=".UserRepositoryActivity"
+            android:label="@string/app_name" android:configChanges="orientation|keyboardHidden" />
         <activity android:name=".BlobsActivity" android:label="@string/app_name"
             android:configChanges="orientation|keyboardHidden" />
         <activity android:name=".CodeViewActivity"
@@ -42,5 +42,6 @@
             android:label="@string/app_name" />
         <activity android:name=".LocalExplorerActivity"
             android:label="@string/app_name" />
+        <service android:enabled="true" android:name=".DownloadService" />
     </application>
 </manifest>
