--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application android:icon="@drawable/icon"
-        android:label="@string/app_name" android:debuggable="true">
+        android:label="@string/app_name" android:debuggable="false" android:allowBackup="true">
         <activity android:name=".StartActivity" android:label="@string/app_name"
             android:theme="@android:style/Theme.Dialog">
             <intent-filter>
