--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,47 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="net.flaxia.android.githubviewer" android:installLocation="auto"
-    android:versionCode="11" android:versionName="1.3.0">
+    android:installLocation="auto"
+    package="net.flaxia.android.githubviewer"
+    android:versionCode="11"
+    android:versionName="1.3.0" >
+
     <uses-sdk android:minSdkVersion="4" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <application android:icon="@drawable/icon"
-        android:label="@string/app_name" android:debuggable="false" android:allowBackup="true">
-        <activity android:name=".StartActivity" android:label="@string/app_name"
-            android:theme="@android:style/Theme.Dialog">
+
+    <application
+        android:allowBackup="true"
+        android:debuggable="false"
+        android:icon="@drawable/icon"
+        android:label="@string/app_name" >
+        <activity
+            android:name=".StartActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Dialog" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="DashboardActivity"
+        <activity
+            android:name="DashboardActivity"
             android:theme="@android:style/Theme.Black.NoTitleBar" />
-        <activity android:name=".SearchActivity"
+        <activity
+            android:name=".SearchActivity"
             android:configChanges="orientation|keyboardHidden"
             android:theme="@android:style/Theme.Black.NoTitleBar" />
-        <activity android:name=".UserSearchActivity"
+        <activity
+            android:name=".UserSearchActivity"
             android:configChanges="orientation|keyboardHidden"
             android:theme="@android:style/Theme.Black.NoTitleBar" />
-        <activity android:name=".UserRepositoryActivity"
-            android:label="@string/app_name" android:configChanges="orientation|keyboardHidden" />
-        <activity android:name=".BlobsActivity" android:label="@string/app_name"
-            android:configChanges="orientation|keyboardHidden" />
-        <activity android:name=".CodeViewActivity"
-            android:configChanges="orientation|keyboardHidden"
-            android:label="@string/app_name" android:theme="@android:style/Theme.Black.NoTitleBar" />
-        <activity android:name=".InformationActivity"
-            android:label="@string/app_name" />
-        <activity android:name=".RepositorieInfoActivity"
+        <activity
+            android:name=".UserRepositoryActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name" />
-        <activity android:name="BookmarkEditActivity"
+        <activity
+            android:name=".BlobsActivity"
+            android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name" />
-        <activity android:name=".BookmarkActivity"
+        <activity
+            android:name=".CodeViewActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Black.NoTitleBar" />
+        <activity
+            android:name=".InformationActivity"
             android:label="@string/app_name" />
-        <activity android:name=".ConfigureActivity"
+        <activity
+            android:name=".RepositorieInfoActivity"
+            android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name" />
-        <activity android:name=".LocalExplorerActivity"
+        <activity
+            android:name="BookmarkEditActivity"
             android:label="@string/app_name" />
-        <service android:enabled="true" android:name=".DownloadService" />
+        <activity
+            android:name=".BookmarkActivity"
+            android:label="@string/app_name" />
+        <activity
+            android:name=".ConfigureActivity"
+            android:label="@string/app_name" />
+        <activity
+            android:name=".LocalExplorerActivity"
+            android:label="@string/app_name" />
+
+        <service
+            android:name=".DownloadService"
+            android:enabled="true" />
     </application>
+
 </manifest>
