--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:allowBackup="true"
         android:debuggable="false"
         android:icon="@drawable/icon"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:theme="@style/theme" >
         <activity
             android:name=".StartActivity"
             android:label="@string/app_name"
@@ -26,8 +27,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="HomeActivity"
-            android:theme="@style/Theme.PageIndicatorDefaults" />
+            android:name="HomeActivity"/>
         <activity
             android:name="DashboardActivity"
             android:theme="@android:style/Theme.Black.NoTitleBar" />
