--- a/proguard.cfg
+++ b/proguard.cfg
@@ -14,15 +14,15 @@
 -keep public class * extends android.preference.Preference
 -keep public class com.android.vending.licensing.ILicensingService
 
--keepclasseswithmembernames class * {
+-keepclasseswithmembers class * {
     native <methods>;
 }
 
--keepclasseswithmembernames class * {
+-keepclasseswithmembers class * {
     public <init>(android.content.Context, android.util.AttributeSet);
 }
 
--keepclasseswithmembernames class * {
+-keepclasseswithmembers class * {
     public <init>(android.content.Context, android.util.AttributeSet, int);
 }
 
@@ -32,5 +32,14 @@
 }
 
 -keep class * implements android.os.Parcelable {
-  public static final android.os.Parcelable$Creator *;
+    public static final android.os.Parcelable$Creator *;
 }
+
+-keepclassmembers class * extends android.app.Activity { 
+    public void *(android.view.View); 
+}
+
+-dontwarn **CompatHoneycomb
+-dontwarn **CompatCreatorHoneycombMR2
+-dontwarn android.support.v4.view.**
+-keep class android.support.v4.** { *; }
