--- a/project.properties
+++ b/project.properties
@@ -8,5 +8,6 @@
 # project structure.
 
 # Project target.
-target=android-8
+target=android-15
 android.library.reference.1=../ViewPagerIndicator
+proguard.config=proguard.cfg
