--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     android:installLocation="auto"
     package="net.flaxia.android.githubviewer"
-    android:versionCode="19"
-    android:versionName="1.9.7" >
+    android:versionCode="20"
+    android:versionName="@string/version_name" >
 
     <uses-sdk android:minSdkVersion="4" />
 
